# plugin-rosetta

./: .copier-answers.yml  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  index.html  justfile  objects.inv  project.justfile  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: deploy-docs.yaml  main.yaml  test_pages_build.yaml
about/: index.html
api-reference/: index.html
docs/: about.md  api-reference.md  getting-started.md  index.md  mappings.md
examples/: README.md
getting-started/: index.html
mappings/: index.html
pr-preview/pr-1/: index.html
pr-preview/pr-1/api-reference/: index.html
pr-preview/pr-2/getting-started/: index.html
pr-preview/pr-2/templates-linkml/: index.html
pr-preview/pr-4/: search.json
pr-preview/pr-4/about/: index.html
pr-preview/pr-5/: index.html  objects.inv
pr-preview/pr-5/templates-linkml/: index.html
pr-preview/pr-6/getting-started/: index.html
pr-preview/pr-7/: 404.html
src/plugin_rosetta/: __init__.py  generate_omop_schema.py  parse_fml_mappings.py  validate_omop.py
src/plugin_rosetta/datamodel/: __init__.py
src/plugin_rosetta/schema/: fhir_resources.yaml  omop_cdm.yaml  omop_results.yaml  omop_vocabulary.yaml  plugin_rosetta.yaml
src/plugin_rosetta/translators/: __init__.py  base.py
src/plugin_rosetta/translators/fhir_to_omop/: __init__.py  allergy.py  condition.py  encounter.py  immunization.py  medication.py  observation.py  patient.py  procedure.py
src/plugin_rosetta/translators/io/: __init__.py  ndjson_reader.py  omop_validator.py  parquet_reader.py  parquet_writer.py
src/plugin_rosetta/translators/schemas/: __init__.py  fhir_nyctea.py  omop_nyctea.py
templates-linkml/: index.html
tests/: __init__.py  test_pydantic_models.py  test_schemas.py  test_translators.py
tests/data/: README.md
